@@ -6,20 +6,17 @@ unsetenv G4NEUTRONHP_DO_NOT_ADJUST_FINAL_STATE
 unsetenv G4NEUTRONHP_USE_ONLY_PHOTONEVAPORATION
 unsetenv G4NEUTRONHP_NELECT_DOPPLER
 unsetenv G4NEUTRONHP_PRODUCE_FISSION_FRAGMENTS
+  
+#### setenv G4NEUTRONHP_SKIP_MISSING_ISOTOPES 1
+#### setenv G4NEUTRONHP_DO_NOT_ADJUST_FINAL_STATE 1
+#### setenv G4NEUTRONHP_USE_ONLY_PHOTONEVAPORATION 1
+#### setenv G4NEUTRONHP_NELECT_DOPPLER 1
+#### setenv G4NEUTRONHP_PRODUCE_FISSION_FRAGMENTS 1
 #
 # for Bertini cascade
 #
 unsetenv G4CASCADE_USE_PRECOMPOUND
- 
-if ( Xx == Xy ) then  
-  setenv G4NEUTRONHP_SKIP_MISSING_ISOTOPES 1
-  setenv G4NEUTRONHP_DO_NOT_ADJUST_FINAL_STATE 1
-  setenv G4NEUTRONHP_USE_ONLY_PHOTONEVAPORATION 1
-  setenv G4NEUTRONHP_NELECT_DOPPLER 1
-  setenv G4NEUTRONHP_PRODUCE_FISSION_FRAGMENTS 1
-#
-  setenv G4CASCADE_USE_PRECOMPOUND 1         
-endif
+#### setenv G4CASCADE_USE_PRECOMPOUND 1         
 
 env |grep G4NEUTRONHP
 env |grep G4CASCADE
